# device-app

./: .gitignore  API_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DELIVERY.md  DESIGN.md  DEVELOPMENT.md  PROJECT_STATUS.md  README.md  RELEASE.md  ROADMAP.md  TEST_PLAN.md  UI_GUIDE.md
.github/workflows/: release.yml
build-release-macos/: CMakeCache.txt  Makefile  cmake_install.cmake
build-release-macos/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-release-macos/device-app.app/Contents/: Info.plist
build-release-macos/device-app.app/Contents/Frameworks/: libb2.1.dylib  libbrotlicommon.1.dylib  libbrotlidec.1.dylib  libdbus-1.3.dylib  libdouble-conversion.3.dylib  libfreetype.6.dylib  libgio-2.0.0.dylib  libglib-2.0.0.dylib  libgmodule-2.0.0.dylib  libgobject-2.0.0.dylib  libgraphite2.3.dylib  libgthread-2.0.0.dylib  libharfbuzz.0.dylib  libicui18n.78.dylib  libicuuc.78.dylib  libintl.8.dylib  libjasper.7.dylib  libjpeg.8.dylib  liblcms2.2.dylib  liblzma.5.dylib  libmd4c.0.dylib  libmng.2.dylib  libpcre2-16.0.dylib  libpcre2-8.0.dylib  libpng16.16.dylib  libsharpyuv.0.dylib  libssl.3.dylib  libtiff.6.dylib  libwebp.7.dylib  libwebpdemux.2.dylib  libwebpmux.3.dylib  libzstd.1.dylib
build-release-macos/device-app.app/Contents/Frameworks/QtCharts.framework/Versions/A/: QtCharts
build-release-macos/device-app.app/Contents/MacOS/: device-app
build-release-macos/device-app.app/Contents/PlugIns/iconengines/: libqsvgicon.dylib
build-release-macos/device-app.app/Contents/PlugIns/imageformats/: libqgif.dylib  libqicns.dylib  libqico.dylib  libqjp2.dylib  libqjpeg.dylib  libqmacheif.dylib  libqmng.dylib  libqpdf.dylib  libqsvg.dylib  libqtga.dylib  libqtiff.dylib  libqwbmp.dylib  libqwebp.dylib
build-release-macos/device-app.app/Contents/PlugIns/networkinformation/: libqapplenetworkinformation.dylib  libqglib.dylib
build-release-macos/device-app.app/Contents/PlugIns/platforminputcontexts/: libqtvirtualkeyboardplugin.dylib
build-release-macos/device-app.app/Contents/PlugIns/styles/: libqmacstyle.dylib
build-release-macos/device-app.app/Contents/PlugIns/tls/: libqcertonlybackend.dylib  libqopensslbackend.dylib  libqsecuretransportbackend.dylib
build-release-macos/device-app_autogen/: deps  moc_predefs.h
build-release-macos/device-app_autogen/4PIRG7OLBM/: moc_workbench_placeholder_page.cpp.d
build-release-macos/device-app_autogen/PRMOGMWJPH/: moc_types.cpp  moc_types.cpp.d
build-release-macos/src/app/: moc_services.cpp_parameters
build-release-macos/src/device/: moc_device_adapter.cpp_parameters  moc_mock_device_adapter.cpp_parameters  moc_real_device_adapter.cpp_parameters
build-release-macos/src/storage/: moc_repositories.cpp_parameters
build-release-macos/src/ui/: moc_main_window.cpp_parameters
build-release-macos/src/ui/dialogs/: moc_chart_settings_dialog.cpp  moc_chart_settings_dialog.cpp_parameters  moc_connection_dialog.cpp_parameters  moc_data_processing_dialog.cpp_parameters  moc_frame_viewer_dialog.cpp  moc_frame_viewer_dialog.cpp_parameters  moc_instrument_control_dialog.cpp  moc_instrument_control_dialog.cpp_parameters  moc_scan_settings_dialog.cpp  moc_scan_settings_dialog.cpp_parameters  moc_system_settings_dialog.cpp_parameters
build-release-macos/src/ui/pages/: moc_data_page.cpp  moc_data_page.cpp_parameters  moc_monitor_page.cpp_parameters  moc_settings_page.cpp  moc_settings_page.cpp_parameters  moc_tune_page.cpp  moc_tune_page.cpp_parameters
build-release-macos/src/ui/widgets/: moc_dual_spectrum_panel.cpp  moc_dual_spectrum_panel.cpp_parameters  moc_instrument_status_panel.cpp_parameters  moc_page_action_header.cpp  moc_page_action_header.cpp_parameters  moc_parameter_slider_row.cpp_parameters  moc_spectrum_view.cpp  moc_spectrum_view.cpp_parameters
scripts/: auto-release.sh  build-qml-wasm.sh  deploy-qml-wasm-tencent.sh  deploy-tencent-cloud.sh  deploy.example.env  git-sync-remote-package.sh  local_web_start.sh  local_web_stop.sh  package-macos.sh  package-windows.ps1  preview-qml-wasm.sh  sync-qml-wasm-to-web.sh
src/app/: application_context.cpp  application_context.h  main.cpp  services.cpp  services.h
src/core/: app_settings.cpp  app_settings.h  types.cpp  types.h
src/device/: device_adapter.h  mock_device_adapter.cpp  mock_device_adapter.h  real_device_adapter.cpp  real_device_adapter.h
src/qml/: app_state.cpp  app_state.h  main.cpp  qml_resources.qrc
src/server/: gateway_server.cpp  gateway_server.h  main.cpp
src/storage/: repositories.cpp  repositories.h
src/ui/: main_window.cpp  main_window.h
src/ui/dialogs/: chart_settings_dialog.cpp  chart_settings_dialog.h  connection_dialog.cpp  connection_dialog.h  data_processing_dialog.cpp  data_processing_dialog.h  frame_viewer_dialog.cpp  frame_viewer_dialog.h  instrument_control_dialog.cpp  instrument_control_dialog.h  scan_settings_dialog.cpp  scan_settings_dialog.h  system_settings_dialog.cpp  system_settings_dialog.h
src/ui/pages/: data_page.cpp  data_page.h  monitor_page.cpp  monitor_page.h  settings_page.cpp  settings_page.h  tune_page.cpp  tune_page.h  workbench_placeholder_page.cpp  workbench_placeholder_page.h
src/ui/widgets/: dual_spectrum_panel.cpp  dual_spectrum_panel.h  instrument_status_panel.cpp  instrument_status_panel.h  page_action_header.cpp  page_action_header.h  parameter_slider_row.cpp  parameter_slider_row.h  spectrum_view.cpp  spectrum_view.h
web/: app.js  device-app-qml.html  device-app-qml.js  index.html  index.legacy.html  styles.css
web-qml/qml/: Main.qml
web-qml/qml/components/: AppButton.qml  AppCheckBox.qml  AppPanel.qml  AppTabHeader.qml
web-qml/qml/theme/: Theme.qml  Tokens.js
(+16 files in other folders)
